<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="@color/colorGreen"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            style="@style/input_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelDistance" />

        <EditText
            android:id="@+id/etDistance"
            style="@style/input_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hintDistance" />

        <TextView
            style="@style/input_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelFuel" />

        <EditText
            android:id="@+id/etPriceFuel"
            style="@style/input_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hintDistance" />

        <TextView
            style="@style/input_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelKm" />

        <EditText
            android:id="@+id/etKm"
            style="@style/input_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hintDistance" />
        <Button
            android:id="@+id/btCalcular"
            style="@style/button"
            android:text="calcular"
            android:textAllCaps="true"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorWhite"
        >

        <TextView
            android:id="@+id/tvResult"
            style="@style/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/result" />

        <TextView
            style="@style/message"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message" />



    </LinearLayout>


</LinearLayout>